@@ -5,6 +5,7 @@ UNRELEASED
   - Add span:context() to get a span's span_context
   - Add span:set_operation_name()
   - Add span:log_kv() to log key/value pairs in a single call
+  - Rename baggage methods to have _item suffix
 
 
 0.0.1 - 2018-05-18
